[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paneljet"
version = "0.2.0"
description = "Accelerate scientific figure assembly by generating Adobe Illustrator JSX and editable AI layouts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "xpenyu" }
]
keywords = ["illustrator", "figure", "jsx", "scientific-figures", "layout", "adobe-illustrator"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: MacOS",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.scripts]
paneljet = "paneljet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
